; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_TruncateTriggerCreateCommand.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/metadata/extr_metadata_sync.c_TruncateTriggerCreateCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }

@.str = private unnamed_addr constant [42 x i8] c"SELECT worker_create_truncate_trigger(%s)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @TruncateTriggerCreateCommand to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @TruncateTriggerCreateCommand(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = call %struct.TYPE_4__* (...) @makeStringInfo()
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %3, align 8
  %6 = load i32, i32* %2, align 4
  %7 = call i8* @generate_qualified_relation_name(i32 %6)
  store i8* %7, i8** %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @quote_literal_cstr(i8* %9)
  %11 = call i32 @appendStringInfo(%struct.TYPE_4__* %8, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  ret i8* %14
}

declare dso_local %struct.TYPE_4__* @makeStringInfo(...) #1

declare dso_local i8* @generate_qualified_relation_name(i32) #1

declare dso_local i32 @appendStringInfo(%struct.TYPE_4__*, i8*, i32) #1

declare dso_local i32 @quote_literal_cstr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
